Remove unnecessarily thrown exceptions and do not use Collectors#toList
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/configurable-code-block-analysis@38427 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c